--- a/config/boards/shields/corne/corne_peripheral_left.conf
+++ b/config/boards/shields/corne/corne_peripheral_left.conf
@@ -2,6 +2,7 @@
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 
 # Disable in-built nice!view widget
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
